@@ -1,6 +1,7 @@
 1.7 (*)
   * Fixed documentation of 'ci.coords' with examples
   * Faster algorithm for DeLong 'roc.test', 'power.roc.test', 'ci.auc', 'var' and 'cov' function (no large matrix allocation).
+  * Handling Math and operations correctly on 'auc' objects (see '?groupGeneric.pROC')
 
 1.6.0.1 (2013-12-28)
   * Removed erroneous error message displayed when predictors and responses were not vectors
